# uav_rl

./: .gitignore  README.md
drone_2d_3d_slam/: README.md  install.sh  package.xml  setup.cfg  setup.py
drone_2d_3d_slam/config/: rtabmap_params.yaml  slam_params.yaml
drone_2d_3d_slam/config/mavros/: uav_px4_config.yaml  uav_px4_pluginlists.yaml
drone_2d_3d_slam/drone_2d_3d_slam/: odom_converter.cpp  td3_training_node.py
drone_2d_3d_slam/launch/: gz_sim.launch.py  slam.launch.py  uav.launch.py
drone_2d_3d_slam/models/: 4020_gz_x500_lidar_rgbd  CMakeLists.txt
drone_2d_3d_slam/models/x500_lidar_rgbd/: model.sdf
drone_slam/: README.md  package.xml  setup.cfg  setup.py
drone_slam/model/: x500_lidar_2d.sdf
drone_slam/models/OakD-Lite/: model.sdf
drone_slam/models/lidar_2d_v2/: model.sdf
drone_slam/models/x500_lidar_rgbd/: model.config
drone_slam_cam/: README.md  package.xml  setup.cfg  setup.py
drone_slam_cam/config/: rtabmap_params.yaml
drone_slam_cam/launch/: slam_3d.launch.py
px4_rl_project/: package.xml  readme.md  setup.cfg  setup.py
px4_rl_project/config/: slam_params.yaml
px4_rl_project/launch/: rtabmap_mapping.launch.py  train_nav.launch.py  x500_all_in_one.launch.py  x500_nav_ppo.launch.py
px4_rl_project/px4_rl_project/: odom_to_tf.py  train_nav_agent.py
px4_rl_project/px4_rl_project/environment/: px4_nav_env.py  px4_nav_obstacle_env.py  workingpx4_nav_env.py
rl_px4/: .gitignore  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
rl_px4/nodes/: obstacle_distance.py  odom_converter.py
rl_px4/rl_px4/: environment_interface.py  td3_algorithm.py  train_agent.py
rl_px4/rl_px4/agent/: ppo_agent.py
rl_px4/rl_px4/environment/: px4_nav_env.py
yolo_ros/: readme.md
