<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_slam_cam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mrchahine45@gmail.com">chahine</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_slam</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
