<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_rl_project</name>
  <version>0.0.0</version>
  <description>PX4 RL Project with obstacle avoidance</description>
  <maintainer email="mrchahine45@gmail.com">chahine</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_image</depend>
  <depend>rviz2</depend>

  <!-- PX4 dependencies -->
  <depend>px4_msgs</depend>

  <!-- YOLO dependencies -->
  <depend>yolo_msgs</depend>
  <exec_depend>yolo_bringup</exec_depend>

  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
